create github pages

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-section content4 cid-rmfrWP6Gkt" id="content4-f">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content4 cid-rmfrWP6Gkt" id="content4-f">
 
     
 
@@ -228,9 +228,9 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YAUtjtljNsdSlY8DKn+wu/rp1QQcRwcwgVqBadP8ZTOmxMNMv3zc1NMvUMYBdj5pZuKIg7KbL20eUStaoCKqp4NmcOuf/eeaFVKSSYZjn5QaQV/tb2EVkx8B1he6+M2Q">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="l+tIM2dNeD1qT6Xjfl4316pTlR8XD6INBj5qn4EV3ygi5U3g+87lOLdXrjthAa3aLSZHxoxrrYom5Ab0mP4lcn6tBZtBbdOHvfwkbdQ6GHv08A7uPTTWdjrutpa+NiQE">
                     <div class="row row-sm-offset">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for getting in touch.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                         </div>
                     </div>
@@ -243,10 +243,7 @@
                             <label for="email-form1-o" class="form-control-label mbr-fonts-style display-7">Email</label>
                             <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-o">
                         </div>
-                        <div data-for="phone" class="col-md-4  form-group">
-                            <label for="phone-form1-o" class="form-control-label mbr-fonts-style display-7">Phone</label>
-                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-o">
-                        </div>
+                        
                         <div data-for="message" class="col-md-12 form-group">
                             <label for="message-form1-o" class="form-control-label mbr-fonts-style display-7">Message</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-o"></textarea>
